--- a/index.html
+++ b/index.html
@@ -49,54 +49,55 @@
 
   <!-- About blurb -->
   <div class="mdl-cell mdl-cell--7-col mdl-cell--6-col-tablet mdl-cell--1-offset-tablet
-   mdl-cell--2-col-phone mdl-cell--1-offset-phone mdl-cell--middle" ng-hide="showNote" ng-cloak>
-    <p id="about">{{about}}</p>
-    <div id="links">
-      <button id="mail-btn" class="mdl-button mdl-js-button mdl-button--icon"
-      ng-click="goTo('mailto:mail@elijahyoon.com')">
-        <i class="material-icons">email</i>
-        <a ng-href="google.com"></a>
-      </button>
-      <div class="mdl-tooltip" for="mail-btn">
-        Email me
-      </div>
-      <button id="instagram-btn" class="mdl-button mdl-js-button mdl-button--icon"
-      ng-click="goTo('https://www.instagram.com/yoonelijah')">
-        <i class="material-icons">camera_alt</i>
-      </button>
-      <div class="mdl-tooltip" for="instagram-btn">
-        Instagram
-      </div>
-      <button id="github-btn" class="mdl-button mdl-js-button mdl-button--icon"
-      ng-click="goTo('https://github.com/elijahyoon/')">
-        <i class="material-icons">code</i>
-      </button>
-      <div class="mdl-tooltip" for="github-btn">
-        GitHub
-      </div>
-      <button id="note-btn" class="mdl-button mdl-js-button mdl-button--icon"
-      ng-click="openNote()">
-        <i class="material-icons">note_add</i>
-      </button>
-      <div class="mdl-tooltip" for="note-btn">
-        Notes
-      </div>
+   mdl-cell--2-col-phone mdl-cell--1-offset-phone mdl-cell--middle" ng-cloak>
+     <div ng-hide="showNote">
+       <p id="about">{{about}}</p>
+       <div id="links">
+         <button id="mail-btn" class="mdl-button mdl-js-button mdl-button--icon"
+         ng-click="goTo('mailto:mail@elijahyoon.com')">
+           <i class="material-icons">email</i>
+           <a ng-href="google.com"></a>
+         </button>
+         <div class="mdl-tooltip" for="mail-btn">
+           Email me
+         </div>
+         <button id="instagram-btn" class="mdl-button mdl-js-button mdl-button--icon"
+         ng-click="goTo('https://www.instagram.com/yoonelijah')">
+           <i class="material-icons">camera_alt</i>
+         </button>
+         <div class="mdl-tooltip" for="instagram-btn">
+           Instagram
+         </div>
+         <button id="github-btn" class="mdl-button mdl-js-button mdl-button--icon"
+         ng-click="goTo('https://github.com/elijahyoon/')">
+           <i class="material-icons">code</i>
+         </button>
+         <div class="mdl-tooltip" for="github-btn">
+           GitHub
+         </div>
+         <button id="note-btn" class="mdl-button mdl-js-button mdl-button--icon"
+         ng-click="openNote()">
+           <i class="material-icons">note_add</i>
+         </button>
+         <div class="mdl-tooltip" for="note-btn">
+           Notes
+         </div>
+       </div>
+     </div>
+     <div ng-show="showNote">
+       <div id="notes-field" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+         <textarea id="notes" class="mdl-textfield__input" type="text" rows= "10" ng-model="note" ng-disabled="noteDisabled"></textarea>
+         <label class="mdl-textfield__label" for="notes">Leave a note ...</label>
+       </div>
+       <div id="note-btns">
+         <button class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="closeNotes()">
+          back
+        </button>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" ng-click="saveNote()" ng-disabled="noteDisabled">
+          save
+        </button>
+       </div>
     </div>
-  </div>
-
-  <div class="mdl-cell mdl-cell--7-col mdl-cell--6-col-tablet mdl-cell--1-offset-tablet
-   mdl-cell--2-col-phone mdl-cell--1-offset-phone mdl-cell--middle" ng-show="showNote" ng-cloak>
-   <div id="notes-field" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-     <textarea id="notes" class="mdl-textfield__input" type="text" rows= "10" ng-model="note" ng-disabled="noteDisabled"></textarea>
-     <label class="mdl-textfield__label" for="notes">Leave a note ...</label>
-   </div>
-   <div id="note-btns">
-     <button class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="closeNotes()">
-      back
-    </button>
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" ng-click="saveNote()" ng-disabled="noteDisabled">
-      save
-    </button>
   </div>
 
   <!-- Bottom padding -->
