Changed favicon and added rewrites to redirect to index when at an invalid path

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <!-- App Styling -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,900">
   <link rel="stylesheet" href="styles/main.css">
+
+  <link rel="icon" href="http://cdn.jsdelivr.net/emojione/assets/png/1f355.png">
 </head>
 <body ng-controller="EYCtrl" id="main-content" class="mdl-grid mdl-grid--no-spacing mdl-color--indigo">
 
