Changed notes text

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
      <div ng-show="showNote">
        <div id="notes-field" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
          <textarea id="notes" class="mdl-textfield__input" type="text" rows= "10" ng-model="note" ng-disabled="noteDisabled"></textarea>
-         <label class="mdl-textfield__label" for="notes">Leave a note ...</label>
+         <label class="mdl-textfield__label" for="notes">Notepad</label>
        </div>
        <div id="note-btns">
          <button class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="closeNotes()">
